# terminity

./: Cargo.toml  README.md  rustfmt.toml
src/: main.rs
src/games/: mod.rs  stratego.rs  sttt.rs
terminity/: Cargo.toml
terminity/examples/chess/: Cargo.toml
terminity/examples/chess/src/: board.rs  lib.rs
terminity/examples/games/: chess.rs  mod.rs  sttt.rs
terminity/examples/hello_world/: Cargo.toml
terminity/examples/hello_world/src/: lib.rs
terminity/src/: lib.rs  main.rs
terminity/src/build_game/: mod.rs
terminity/src/events/: mod.rs
terminity/src/game/: mod.rs
terminity/src/games/: chess.rs  mod.rs  stratego.rs  sttt.rs
terminity/src/games/sttt/: mod.rs
terminity/src/wchar/: mod.rs
terminity/src/widget_string/: mod.rs
terminity/src/widget_string/line/: mod.rs
terminity/src/widgets/: auto_padder.rs  canvas.rs  frame.rs  mod.rs  text.rs
terminity/src/widgets/content/: mod.rs
terminity/src/widgets/positionning/: div.rs  mod.rs
terminity_proc/: Cargo.toml  README.md
terminity_proc/src/: derive_event_bubbling.rs  derive_event_bubbling_widget.rs  derive_struct_frame.rs  frame.rs  img.rs  lib.rs  wstr.rs
terminity_runtime/: Cargo.toml  README.md
terminity_runtime/src/: main.rs
terminity_runtime/src/events/: mod.rs
terminity_runtime/src/game_handling/: mod.rs
terminity_runtime/src/interface/: game_repository.rs  gamescreen.rs  mod.rs  start.rs
terminity_runtime/src/interface/mainscreen/: install.rs  library.rs  mod.rs  options.rs
terminity_widgets/: Cargo.toml  README.md
terminity_widgets/src/: lib.rs
terminity_widgets/src/widgets/: auto_padder.rs  canvas.rs  frame.rs  img.rs  mod.rs  padder.rs  text.rs
terminity_widgets_proc/: Cargo.toml  LICENSE
terminity_widgets_proc/src/: derive_struct_frame.rs  frame.rs  lib.rs
