[package]
name = "terminity"
version = "0.1.0"
authors = ["Naeio <naeiogalaxy@gmail.com>"]
edition = "2021"
description = "Enviroment for the best terminal UI quality for games"
readme = "../README.md"
#homepage = 
repository = "https://github.com/NeoGalaxy/terminity"
license = "BSD-4-Clause"
#license-file = "../LICENSE"
keywords = ["TUI", "UI", "terminal", "game-development"]
categories = ["game-development", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27", features = ["event-stream"] }
rand = "0.8.5"
lazy_static = "1.4"
byteorder = "1.5.0"
bincode = "1.3.3"
serde = {version = "1.0", features = ["derive"]}
concat-idents = "1.1.5"

# for widgets
unicode-width = "0.1.5"
terminity_proc = { version = "0.1", path = "../terminity_proc" }

[dev-dependencies]
format = "0.2.4"
