[package]
name = "terminity_runtime"
version = "0.1.0"
authors = ["Naeio <naeiogalaxy@gmail.com>"]
edition = "2021"
description = "Runtime to run terminity projects"
readme = "../README.md"
repository = "https://github.com/NeoGalaxy/terminity"
license = "UNLICENSED"
keywords = ["TUI", "UI", "terminal", "game-development"]
categories = ["game-development", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminity = { version = "0.1", path = "../terminity" }
terminity_widgets = { version = "0.1", path = "../terminity_widgets" }
crossterm = { version = "0.26", features = ["event-stream"] }
rand = "0.8.5"
clap = { version = "4.4", features = ["derive"] }
libloading = "0.8"
