[package]
name = "terminity_widgets"
version = "0.1.0"
authors = ["Naeio <naeiogalaxy@gmail.com>"]
edition = "2021"
description = "Widgets for TUI"
readme = "README.md"
#homepage = 
repository = "https://github.com/NeoGalaxy/terminity"
license = "BSD-4-Clause"
#license-file = "../LICENSE"
keywords = ["TUI", "UI", "terminal", "game-development"]
categories = ["game-development", "games"]
publish = ["terminity"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminity_widgets_proc = { version = "*", path = "../terminity_widgets_proc" }
unicode-segmentation = "1.10"
strip-ansi-escapes = "0.1"
crossterm = "0.26"

[dev-dependencies]
format = "0.2.4"
