[package]
name = "terminity_widgets_proc"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = { version = "1" }
syn = {version = "1.0", features = ["full", "parsing"]}
quote = "1.0"
proc-macro-crate = "1.3.0"
proc-macro2 = "*"
crossterm = "*"
#proc_macro_error = "1.0"
