[package]
name = "terminity_widgets_proc"
version = "0.1.0"
authors = ["Naeio <naeiogalaxy@gmail.com>"]
edition = "2021"
description = "Widgets for TUI"
readme = "README.md"
#homepage = 
repository = "https://github.com/NeoGalaxy/terminity"
license = "BSD-4-Clause"
#license-file = "../LICENSE"
keywords = ["TUI", "UI", "terminal", "game-development"]
categories = ["game-development", "games"]
publish = ["terminity"]

[lib]
proc-macro = true

[dependencies]
proc-macro-error = { version = "1" }
syn = {version = "1.0", features = ["full", "parsing"]}
quote = "1.0"
proc-macro-crate = "1.3.0"
proc-macro2 = "*"
crossterm = "*"

[dev-dependencies]
terminity_widgets = { version = "*", path = "../terminity_widgets" }
