[package]
name = "terminity_widgets_proc"
version = "0.1.0"
authors = ["Naeio <naeiogalaxy@gmail.com>"]
edition = "2021"
description = "Proc macros for terminity_widgets"
readme = "README.md"
#homepage = 
repository = "https://github.com/NeoGalaxy/terminity"
license = "BSD-4-Clause"
keywords = ["proc-macro", "terminity_widgets"]
categories = ["game-development", "games"]

[lib]
proc-macro = true

[dependencies]
proc-macro-error = { version = "1" }
syn = {version = "1.0", features = ["full", "parsing"]}
quote = "1.0"
unicode-segmentation = "1.10"
strip-ansi-escapes = "0.1"
proc-macro-crate = "1.3.0"
proc-macro2 = "1.0"
darling = "0.14.4"
convert_case = "0.6.0"

[dev-dependencies]
crossterm = "0.26"
terminity_widgets = { version = "0.1", path = "../terminity_widgets" }
